* _Layout.cshtml: User login after authentication
* Register.cshtml: layout

* Login.cshtml: layout

* Startup.cs:
* AppWithDocker.csproj:
* AppDbContext.cs:

--- a/AppWithDocker/Views/Shared/_Layout.cshtml
+++ b/AppWithDocker/Views/Shared/_Layout.cshtml
@@ -11,8 +11,9 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">AppWithDocker</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                <a class="navbar-brand" asp-area="" asp-controller="" asp-action="">AppWithDocker</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -33,7 +34,7 @@
                     }
                     else
                     {
-                        <ul class="navbar-nav flex-grow-1">
+                        <ul class="navbar-nav flex-direction-row" style="text-align:right;">
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
                             </li>
