--- a/AppWithDocker/Views/Account/Login.cshtml
+++ b/AppWithDocker/Views/Account/Login.cshtml
@@ -23,22 +23,14 @@
                     <input asp-for="Password" class="form-control" />
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
-                </div>
-            <div>
-                <div class="form-group">
-                    <div class="custom-control custom-checkbox">
-                        <input asp-for="RememberMe" type="checkbox" class="custom-control-input">
-                        <label class="custom-control-label" asp-for="RememberMe">@Html.DisplayNameFor(m => m.RememberMe)</label>
-                    </div>
-
-                </div>
+            </div>
+            <div class="col-md-5">
+              <button type="submit" class="btn-primary">Login</button>
             </div>
 
-                <button type="submit" class="btn-primary">Login</button>
+
 
         </form>
 
     </div>
 </div>
-@{
-}
