--- a/AppWithDocker/Views/Account/Register.cshtml
+++ b/AppWithDocker/Views/Account/Register.cshtml
@@ -8,7 +8,21 @@
 <div class="row">
     <div class="col-md-12">
         <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
+            @*<div asp-validation-summary="All" class="text-danger"></div>*@
+            <div class="col-md-5">
+                <div class="form-group">
+                    <label asp-for="UserName"></label>
+                    <input asp-for="UserName" class="form-control" />
+                    <span asp-validation-for="UserName" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="col-md-5">
+                <div class="form-group">
+                    <label asp-for="Mobile"></label>
+                    <input asp-for="Mobile" class="form-control" />
+                    <span asp-validation-for="Mobile" class="text-danger"></span>
+                </div>
+            </div>
             <div class="col-md-5">
                 <div class="form-group">
                     <label asp-for="Email"></label>
@@ -29,8 +43,10 @@
                     <input asp-for="ConfirmPassword" class="form-control" />
                     <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                 </div>
-                </div>
+            </div>
+            <div class="col-md-5">
                 <button type="submit" class="btn-primary">Register</button>
+                </div>
         </form>
 
     </div>
